# ChangeLog for kde-base/kde
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kde/Attic/ChangeLog,v 1.118 2005/10/04 23:27:21 hardave Exp $

  04 Oct 2005; Hardave Riar <hardave@gentoo.org> kde-3.4.1.ebuild:
  Keyworded ~mips.

*kde-3.5_beta1 (21 Sep 2005)

  21 Sep 2005; Gregorio Guidi <greg_g@gentoo.org> +kde-3.5_beta1.ebuild:
  New version.

  25 Aug 2005; Aron Griffis <agriffis@gentoo.org> kde-3.4.1.ebuild:
  stable on ia64

*kde-3.5_alpha1 (24 Aug 2005)

  24 Aug 2005; Gregorio Guidi <greg_g@gentoo.org> +kde-3.5_alpha1.ebuild:
  KDE 3.5 prerelease.

*kde-3.4.2 (28 Jul 2005)

  28 Jul 2005; Gregorio Guidi <greg_g@gentoo.org> +kde-3.4.2.ebuild:
  New version.

  28 Jul 2005; Guy Martin <gmsoft@gentoo.org> kde-3.4.1.ebuild:
  Stable on hppa.

  08 Jul 2005; Hardave Riar <hardave@gentoo.org> kde-3.3.2.ebuild:
  Stable on mips.

  08 Jul 2005; Jason Wever <weeve@gentoo.org> kde-3.4.1.ebuild:
  Stable on SPARC.

  04 Jul 2005; Bryan Østergaard <kloeri@gentoo.org> kde-3.4.1.ebuild:
  Add ~alpha keyword.

  01 Jul 2005; Hardave Riar <hardave@gentoo.org> kde-3.3.2.ebuild:
  Marked ~mips

  01 Jul 2005; Joseph Jezak <josejx@gentoo.org> kde-3.4.1.ebuild:
  Marked ppc stable for bug #97544.

*kde-3.4.1 (27 May 2005)

  27 May 2005; Gregorio Guidi <greg_g@gentoo.org> +kde-3.4.1.ebuild:
  New version.

  12 May 2005; Aron Griffis <agriffis@gentoo.org> kde-3.4.0.ebuild:
  add ~ia64

  22 Mar 2005; Carsten Lohrke <carlo@gentoo.org> kde-3.4.0.ebuild:
  removed kdewebdev temporarily, #86284

  18 Mar 2005; Daniel Goller <morfic@gentoo.org> kde-3.4.0.ebuild:
  Added to ~ppc

*kde-3.4.0 (14 Mar 2005)

  14 Mar 2005; Gregorio Guidi <greg_g@gentoo.org> +kde-3.4.0.ebuild:
  Ebuild for KDE 3.4 final.

*kde-3.4.0_rc1 (27 Feb 2005)

  27 Feb 2005; Gregorio Guidi <greg_g@gentoo.org> +kde-3.4.0_rc1.ebuild:
  New version. Readd kdewebdev as dependency.

  15 Feb 2005; Jason Wever <weeve@gentoo.org> kde-3.4.0_beta2.ebuild: