@@ -1,13 +1,13 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kde/Attic/kde-3.4.2.ebuild,v 1.1 2005/07/28 13:05:09 greg_g Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kde/Attic/kde-3.4.2.ebuild,v 1.2 2005/10/06 23:40:35 hardave Exp $
 
 DESCRIPTION="KDE - merge this to pull in all non-developer kde-base/* packages"
 HOMEPAGE="http://www.kde.org/"
 
 LICENSE="GPL-2"
 SLOT="3.4"
-KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~ppc ~sparc ~x86"
+KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~mips ~ppc ~sparc ~x86"
 IUSE="accessibility"
 
 # excluded: kdebindings, kdesdk, since these are developer-only packages
