@@ -1,12 +1,12 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeedu/Attic/kdeedu-3.4.2-r2.ebuild,v 1.1 2005/08/14 23:33:39 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeedu/Attic/kdeedu-3.4.2-r2.ebuild,v 1.2 2005/10/06 23:38:38 hardave Exp $
 
 inherit kde-dist
 
 DESCRIPTION="KDE educational apps"
 
-KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ~sparc ~x86"
+KEYWORDS="~alpha ~amd64 ~ia64 ~mips ~ppc ~sparc ~x86"
 IUSE="kig-scripting"
 
 DEPEND="kig-scripting? ( >=dev-libs/boost-1.32 )"
