@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kde
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kde/Attic/ChangeLog,v 1.118 2005/10/04 23:27:21 hardave Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kde/Attic/ChangeLog,v 1.119 2005/10/06 23:40:35 hardave Exp $
+
+  06 Oct 2005; Hardave Riar <hardave@gentoo.org> kde-3.4.2.ebuild:
+  Keyworded ~mips.
 
   04 Oct 2005; Hardave Riar <hardave@gentoo.org> kde-3.4.1.ebuild:
   Keyworded ~mips.
